--- a/validation/java/ninjsvalidator/pom.xml
+++ b/validation/java/ninjsvalidator/pom.xml
@@ -18,6 +18,10 @@
     <artifactId>ninjsvalidator</artifactId>
     <version>1.2-SNAPSHOT</version>
 
+    <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    
     <build>
         <plugins>
             <plugin>
