Reverting change to config script - hoping that changing the filename in this branch will help

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
     steps:
       - checkout
       - python/load-cache
-      - python/install-deps:
-          dependency-file: ./validation/python/requirements.txt
+      - python/install-deps
       - python/save-cache
       - run:
           command: ./validation/python/runtests.py
