--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,14 @@ orbs:
 jobs:
   build-and-test:
     executor: python/default
+    working_directory: ./validation/python
     steps:
       - checkout
       - python/load-cache
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./validation/python/runtests.py
+          command: runtests.py
           name: Run ninjs unit tests
 
 workflows:
