--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,15 @@
 version: 2.1
 
 orbs:
-  python: circleci/python@0.2.1
+  python: circleci/python@1.3.2
 
 jobs:
   build-and-test:
     executor: python/default
     steps:
       - checkout
-      - python/load-cache
-      - run:
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r validation/python/requirements.txt
-      - python/save-cache
+      - python/install-packages:
+          pip-dependency-file: validation/python/requirements.txt
       - run:
           command: validation/python/runtests.py
           name: Run ninjs unit tests using Python jsonschema
